--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,3 +1,11 @@
+<form id="search_title" class="navbar-form navbar-left" action="/recipes" method="get"  >
+        <div class="form-group">
+          <input type="text" name="search" class="form-control" placeholder="Search by title">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+</form>
+
+<!-- Page Content -->
 <div class="container">
   <div class="jumbotron, index-jumbotron">
     <div class="jumbotron-contents">
