--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container text-center page-title">
-  <h2> Sign up for Ebay Clone </h2>
+  <h2> Sign up for Newbay </h2>
 </div>
 
 <div class="container  text-center new-item-form">
