--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 
     <div class="footer navbar-fixed-bottom">
       <div class="container text-center">
-        <p id="footer-text-container"> 8th Light Apprentice Project 2016</p>
+        <p id="footer-text-container"> Individual Assessment 2016</p>
       </div>
     </div>
   </body>
